syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.datapersistance.protobuf";

service Product{
  rpc saveProduct(SaveRequestProduct) returns (SaveResponseProduct);
  rpc findByRegNoProduct(FindByRegNoRequestProduct) returns(FindByRegNoResponseProduct);
  rpc updateProduct(UpdateRequestProduct) returns(UpdateResponseProduct);
  rpc deleteByRegNoProduct(RequestDeleteByRegNoProduct) returns (EmptyProduct);
  rpc findAllProduct(EmptyProduct) returns (ResponseFindAllProduct);
  rpc getMaxIdProduct(EmptyProduct) returns (ResponseGetMaxIdProduct);

}

message ProductMessage{
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;

}

message SaveRequestProduct {
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;
}

message SaveResponseProduct {
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;
}
//-----------

message FindByRegNoRequestProduct {
  int64 registrationNo = 1;
}

message FindByRegNoResponseProduct {
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;
}
//
message UpdateRequestProduct {
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;
}

message UpdateResponseProduct {
  int64 registrationNo = 1;
  int64 trayId = 2;
  int32 partNo = 3;
}

message ResponseFindAllProduct {
  repeated ProductMessage product_list = 1;
}


message RequestDeleteByRegNoProduct {
  int64 part_no = 1;
}

message ResponseGetMaxIdProduct {
  int32 max_id = 1;
}

message EmptyProduct {

}

